Fix large H1 elements overflowing out of sides of mobile devices

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,6 +45,8 @@ h1 {
     font-size: 5rem;
     font-weight: bold;
     font-family: "Inter Tight", sans-serif;
+    overflow-wrap: break-word;
+    max-width: 100%;
 }
 h2 {
     font-size: 2.5rem;
